# internal/httpapi/routes.go
@@ -55,6 +55,7 @@ func Register(router gin.IRouter, svc *service.Service) {
 	api.DELETE("/bookmarks/:id", h.deleteBookmark)
 
 	api.POST("/reading-list/items", h.addReadingListItem)
+	api.GET("/reading-list/items", h.listReadingListItems)
 	api.GET("/reading-list/rss", h.getReadingListRSS)
 }
 
